# platform.external.uwb

./: .gitignore  DIR_METADATA  OWNERS  OWNERS_chromeos
src/: Android.bp  TEST_MAPPING  uwb_rust_test_config_template.xml
src/adaptation/: UwbAdaptation.cc  config.cc  uwb_config.cc
src/fuzz/: fuzzer.rs
src/gki/common/: uwb_gki.h  uwb_gki_buffer.cc  uwb_gki_common.h  uwb_gki_time.cc
src/gki/ulinux/: uwb_gki_int.h  uwb_gki_ulinux.cc
src/include/: UwbAdaptation.h  hal_uwb.h  uwb_config.h  uwb_gki_target.h  uwb_hal_api.h  uwb_hal_int.h  uwb_target.h  uwb_types.h
src/log/: uci_log.h
src/rust/: error.rs  lib.rs  uci_packets.pdl
src/rust/adaptation/: mock_adaptation.rs  mock_hal.rs  mod.rs
src/rust/event_manager/: mod.rs  (+1 more)
src/rust/uwb_core/: Cargo.toml  README.md  build.rs  rustfmt.toml
src/rust/uwb_core/examples/: main.rs
src/rust/uwb_core/fuzz/: Cargo.toml  proto_uwb_service_fuzzer.rs
src/rust/uwb_core/protos/: uwb_service.proto
src/rust/uwb_core/src/: error.rs  lib.rs  params.rs  proto.rs  service.rs  session.rs  uci.rs  utils.rs
src/rust/uwb_core/src/params/: aliro_app_config_params.rs  app_config_params.rs  ccc_app_config_params.rs  ccc_started_app_config_params.rs  fira_app_config_params.rs  uci_packets.rs  utils.rs
src/rust/uwb_core/src/proto/: mappings.rs  utils.rs
src/rust/uwb_core/src/service/: error.rs  mock_uwb_service_callback.rs  proto_uwb_service.rs  uwb_service.rs  uwb_service_builder.rs  uwb_service_callback_builder.rs
src/rust/uwb_core/src/session/: error.rs  params.rs  session_manager.rs  uwb_session.rs
src/rust/uwb_core/src/session/params/: ccc_app_config_params.rs  ccc_started_app_config_params.rs  fira_app_config_params.rs  utils.rs
src/rust/uwb_core/src/uci/: command.rs  error.rs  message.rs  mock_uci_hal.rs  mock_uci_logger.rs  mock_uci_manager.rs  notification.rs  params.rs  pcapng_block.rs  pcapng_uci_logger_factory.rs  response.rs  timeout_uci_hal.rs  uci_hal.rs  uci_logger.rs  uci_logger_factory.rs  uci_logger_pcapng.rs  uci_manager.rs  uci_manager_sync.rs
src/tests/: libuwb_core_cargo_test.sh  libuwb_core_cargo_test.xml
(+35 files in other folders)
