[package]
name = "uwb_core"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.32"
bytes = "1.1.0"
log = "0.4.14"
num-traits = "0.2.12"
num-derive = "0.3.3"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
zeroize = "1.5.1"

uwb_uci_packets = { path = "../uwb_uci_packets" }  # provided by ebuild

[dev-dependencies]
env_logger = "0.9.0"
